# P.U.R.G.E

./: .gitignore  Cargo.toml  LICENSE.md  PKGBUILD  README.md  build.rs  build.sh  cargo.toml  purge.spec
assets/data/: uad_lists.json
debian/: control
src/: adb.rs  config.rs  gui.rs  main.rs
src/gui/: mod.rs  theme.rs  widgets.rs
