[package]
name = "purge"
version = "1.2.0"
edition = "2021"
description = "P.U.R.G.E. - Package Uninstaller and Resource & Garbage Eliminator"

[dependencies]
eframe = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7"
image = { version = "0.24", default-features = false, features = ["png"] }
egui_extras = { version = "0.26", features = ["image"] }
