[package]
name = "purge"
version = "1.2.0"
edition = "2021"
description = "P.U.R.G.E. - Package Uninstaller and Resource & Garbage Eliminator"
license = "MIT"
authors = ["Md. Siam Mia"]

[dependencies]
eframe = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7"
image = { version = "0.24", default-features = false, features = ["png"] }
egui_extras = { version = "0.26.2", features = ["image", "svg"] }

[build-dependencies]
winres = "0.1"

# Add this section for debian package metadata
[package.metadata.deb]
copyright = "2025 Md. Siam Mia"
license-file = ["LICENSE.md", "0"]
depends = "$auto"
section = "utility"
priority = "optional"